--- a/package.json
+++ b/package.json
@@ -3,12 +3,14 @@
   "version": "1.0.0",
   "description": "Sarabanda Server Locale",
   "main": "server.js",
+  "bin": "server.js",
   "scripts": {
     "start": "node server.js"
   },
   "dependencies": {
     "express": "^4.22.1",
     "ip": "^1.1.8",
+    "qrcode-terminal": "^0.12.0",
     "socket.io": "^4.7.4"
   }
 }
